@@ -1,6 +1,20 @@
 # This code must not cause non-stdlib imports to support self-bootstrapping.
 
 
+class ExplainableException(Exception):
+    """This exception provides an API that allows batou to display
+    a reasonable error message without having to show tracebacks.
+    """
+
+    def explain(self):
+        """Explain yourself. :)
+
+        Return a unicode string.
+
+        """
+        raise NotImplementedError
+
+
 class UpdateNeeded(Exception):
     """A component requires an update."""
     pass
